--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,9 @@
+$orange:rgba(230, 154, 55, 1);
+$white: rgba(202, 202, 202, 1);
+$black: #000000;
+$gray: #323232;
+$white-light: #F3F3F3;;
+
 * {
     margin: 0;
     padding: 0;
@@ -8,4 +14,22 @@
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 10px;
+  }
+  .header-container{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 25px 0;
+  }
+  .search{
+  width: 557px;
+  height: 50px;
+  background-color: $white-light;
+  border: none;
+  outline: none;
+  padding-left: 20px;
+  }
+  hr{
+    opacity: 0.15;
+    border: 1px solid $black;     
   }
