--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,4 +37,23 @@ hr {
   opacity: 0.15;
   border: 1px solid #000000;
 }
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.navigation li {
+  cursor: pointer;
+  padding: 20px;
+}
+
+.navigation li:hover {
+  background-color: #e69a37;
+  color: #F3F3F3;
+}
 /*# sourceMappingURL=styles.css.map */
