--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,8 +64,7 @@ hr {
 
 .slider {
   background-image: url(../src/plant.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .slider-btn {
@@ -95,5 +94,28 @@ h1 {
   color: #FFFFFF;
   max-width: 600px;
   padding-bottom: 94px;
+}
+
+.slider-pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagination {
+  cursor: pointer;
+  width: 12px;
+  height: 12px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid #FFFFFF;
+  margin-right: 16px;
+  margin-bottom: 40px;
+}
+
+.pagination:hover {
+  background: #FFFFFF;
 }
 /*# sourceMappingURL=styles.css.map */
