--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,17 +24,34 @@
   padding: 25px 0;
 }
 
+form {
+  position: relative;
+}
+
 .search {
   font-family: Museo Sans Cyrl;
   font-size: 16px;
   color: #000000;
   opacity: 0.5;
-  width: 557px;
+  width: 521px;
   height: 50px;
   background-color: #F3F3F3;
   border: none;
   outline: none;
   padding-left: 20px;
+}
+
+.submit {
+  background-color: #F3F3F3;
+  opacity: 0.5;
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 36px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
 }
 
 hr {
