--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,17 +21,32 @@ $white-light: #F3F3F3;;
       align-items: center;
       padding: 25px 0;
   }
+  form{
+    position: relative;
+  }
   .search{
   font-family: Museo Sans Cyrl;
   font-size: 16px;
   color: $black;
   opacity: 0.5;
-  width: 557px;
+  width: 521px;
   height: 50px;
   background-color: $white-light;
   border: none;
   outline: none;
   padding-left: 20px;
+  }
+  .submit{
+  background-color: $white-light;
+  opacity: 0.5;
+  border: none;
+  outline: none; 
+  height: 50px;
+  width:36px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
   }
   hr{
     opacity: 0.15;
