--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,10 @@
 $orange:#E69A37;
-$white: #FFFFFF;;
+$white: #FFFFFF;
 $black: #000000;
 $gray: #323232;
-$white-light: #F3F3F3;;
+$white-light: #F3F3F3;
+$Museo-font: Museo Sans Cyrl;
+$margin20: 20px;
 
 * {
     margin: 0;
@@ -25,7 +27,7 @@ $white-light: #F3F3F3;;
     position: relative;
   }
   .search{
-  font-family: Museo Sans Cyrl;
+  font-family: $Museo-font;
   font-size: 16px;
   color: $black;
   opacity: 0.5;
@@ -34,7 +36,7 @@ $white-light: #F3F3F3;;
   background-color: $white-light;
   border: none;
   outline: none;
-  padding-left: 20px;
+  padding-left: $margin20;
   }
   .submit{
   background-color: $white-light;
@@ -58,13 +60,13 @@ $white-light: #F3F3F3;;
   }
   
   .navigation li a{
-  font-family: Museo Sans Cyrl;
+  font-family: $Museo-font;
   font-size: 18px;
   color: $black;
   display: block;
   text-decoration: none;
   color: $black;
-  padding: 20px;
+  padding: $margin20;
   }
   .navigation li a:hover{
     background-color: $orange;
@@ -91,16 +93,26 @@ $white-light: #F3F3F3;;
   background-color: $orange;
   margin-top: 130px;
   }
+  .slider-btn:hover {
+    border: 3px dotted $gray;
+    color: $black;
+    background: rgba(0,0,0,0);
+    transition-duration: 0.5s;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+  .slider-btn:active{
+  transform: translateY(2px);
+  }
   h1{
-font-family: Museo Sans Cyrl;
+font-family: $Museo-font;
 font-weight: bold;
 font-size: 60px;
 color: $white;
-margin: 20px 0;
+margin: $margin20 0;
 max-width: 550px;
   }
 .slider-container p{
-font-family: Museo Sans Cyrl;
+font-family: $Museo-font;
 font-size: 22px;
 line-height: 28px;
 color: $white;
@@ -132,16 +144,17 @@ margin-bottom: 40px;
 .service{
   display: flex;
   align-items: center;
-  padding: 35px 20px;
+  padding: 35px $margin20;
 }
 .service:hover{
   background-color: $white-light;
+  text-decoration: underline;
 }
 .service-img{
   margin-right: 12px;
 }
 .service-name a{
-font-family: Museo Sans Cyrl;
+font-family: $Museo-font;
 text-decoration: none;
 font-size: 14px;
 color: $gray;
