--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 25px 0;
+  padding: 15px 0;
 }
 
 form {
@@ -105,6 +105,10 @@ hr {
   color: #F3F3F3;
   background-color: #E69A37;
   margin-top: 130px;
+  font-family: Museo Sans Cyrl;
+  font-weight: bold;
+  font-size: 13px;
+  letter-spacing: 0.2em;
 }
 
 .slider-btn:hover {
@@ -181,6 +185,7 @@ h1 {
       -ms-flex-align: center;
           align-items: center;
   padding: 35px 20px;
+  cursor: pointer;
 }
 
 .service:hover {
@@ -193,6 +198,7 @@ h1 {
 }
 
 .service-name a {
+  display: block;
   font-family: Museo Sans Cyrl;
   text-decoration: none;
   font-size: 14px;
