--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,20 +29,20 @@ form {
 }
 
 .search {
-  font-family: Museo Sans Cyrl;
+  font-family: "Museo Sans Cyrl 500";
   font-size: 16px;
   color: #000000;
   opacity: 0.5;
   width: 521px;
   height: 50px;
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
   border: none;
   outline: none;
   padding-left: 20px;
 }
 
 .submit {
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
   opacity: 0.5;
   border: none;
   outline: none;
@@ -69,7 +69,7 @@ hr {
 }
 
 .navigation li a {
-  font-family: Museo Sans Cyrl;
+  font-family: "Museo Sans Cyrl 500";
   font-size: 18px;
   color: #000000;
   display: block;
@@ -79,8 +79,8 @@ hr {
 }
 
 .navigation li a:hover {
-  background-color: #E69A37;
-  color: #FFFFFF;
+  background-color: #e69a37;
+  color: #ffffff;
 }
 
 .navigation li a:active {
@@ -102,10 +102,10 @@ hr {
   text-transform: uppercase;
   cursor: pointer;
   border: none;
-  color: #F3F3F3;
-  background-color: #E69A37;
+  color: #f3f3f3;
+  background-color: #e69a37;
   margin-top: 130px;
-  font-family: Museo Sans Cyrl;
+  font-family: "Museo Sans Cyrl 900";
   font-weight: bold;
   font-size: 13px;
   letter-spacing: 0.2em;
@@ -127,19 +127,19 @@ hr {
 }
 
 h1 {
-  font-family: Museo Sans Cyrl;
+  font-family: "Museo Sans Cyrl 900";
   font-weight: bold;
   font-size: 60px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin: 20px 0;
   max-width: 550px;
 }
 
 .slider-container p {
-  font-family: Museo Sans Cyrl;
+  font-family: "Museo Sans Cyrl 500";
   font-size: 22px;
   line-height: 28px;
-  color: #FFFFFF;
+  color: #ffffff;
   max-width: 600px;
   padding-bottom: 94px;
 }
@@ -158,17 +158,17 @@ h1 {
   width: 12px;
   height: 12px;
   background: rgba(255, 255, 255, 0.1);
-  border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
   margin-right: 16px;
   margin-bottom: 40px;
 }
 
 .pagination:hover {
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .pagination:active {
-  background: #E69A37;
+  background: #e69a37;
 }
 
 .services {
@@ -189,7 +189,7 @@ h1 {
 }
 
 .service:hover {
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
   text-decoration: underline;
 }
 
@@ -199,7 +199,7 @@ h1 {
 
 .service-name a {
   display: block;
-  font-family: Museo Sans Cyrl;
+  font-family: "Museo Sans Cyrl 500";
   text-decoration: none;
   font-size: 14px;
   color: #323232;
