--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .wrapper {
@@ -16,11 +16,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 15px 0;
 }
 
@@ -64,8 +64,8 @@ hr {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .navigation li a {
@@ -116,14 +116,16 @@ hr {
   color: #000000;
   background: rgba(0, 0, 0, 0);
   -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
-  -webkit-box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-          box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  transition-duration: 0.5s;
+  -webkit-box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .slider-btn:active {
   -webkit-transform: translateY(2px);
-          transform: translateY(2px);
+  transform: translateY(2px);
 }
 
 h1 {
@@ -149,8 +151,8 @@ h1 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .pagination {
@@ -182,8 +184,8 @@ h1 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 35px 20px;
   cursor: pointer;
 }
@@ -208,12 +210,11 @@ h1 {
 .new {
   margin-top: 67px;
 }
-@media screen and (max-width:1199px){
-
+@media screen and (max-width: 1199px) {
   .service {
     padding: 2.1875em 1em;
   }
-  h1{
+  h1 {
     font-size: 50px;
     max-width: 450px;
   }
@@ -226,12 +227,11 @@ h1 {
   }
 }
 
-@media screen and (max-width:1199px){
-
+@media screen and (max-width: 1199px) {
   .service {
     padding: 2.1875em 1em;
   }
-  h1{
+  h1 {
     font-size: 50px;
     max-width: 450px;
   }
@@ -243,26 +243,26 @@ h1 {
     line-height: 20px;
   }
 }
-@media screen and (max-width:991px){
-  .logo img{
+@media screen and (max-width: 991px) {
+  .logo img {
     max-width: 200px;
   }
   .search {
     max-width: 321px;
     height: 50px;
   }
-  
+
   .navigation {
     flex-wrap: wrap;
     flex-direction: column;
   }
-  
+
   .navigation li a {
     font-size: 18px;
     padding: 10px;
     text-align: center;
   }
-  
+
   .slider-btn {
     max-width: 228px;
     margin-top: 6em;
@@ -285,7 +285,7 @@ h1 {
     flex-wrap: wrap;
     justify-content: flex-start;
   }
-  .service-center{
+  .service-center {
     margin-left: 80px;
   }
   .service {
@@ -299,7 +299,7 @@ h1 {
     margin-top: 3em;
   }
 }
-@media screen and (max-width:767px){
+@media screen and (max-width: 767px) {
   .search {
     max-width: 221px;
     height: 40px;
@@ -307,16 +307,16 @@ h1 {
   .submit {
     height: 40px;
   }
-  .service-center{
+  .service-center {
     margin-left: 150px;
   }
   .service {
     padding: 1.25em 0em 1.25em 0em;
   }
 }
-@media screen and (max-width:490px){
+@media screen and (max-width: 490px) {
   .search {
- display: none;
+    display: none;
   }
   .submit {
     display: none;
@@ -324,10 +324,10 @@ h1 {
   .slider {
     background-size: cover;
   }
-  .service-center{
+  .service-center {
     margin-left: 20px;
   }
-  h1{
+  h1 {
     font-size: 30px;
     max-width: 300px;
   }
